syntax = "proto3";
package com.hr.pb;
option java_package = "com.hr.pb";
option java_outer_classname = "WXMyActivity";
import "WX.proto";
import "Util.proto";
//我的挑战

enum PBWxRewardProcessType
{
Uncomplete=0;
Complete=1;
Reward=2;
}

//我的挑战
message PBWxMyActivityPage{
	int32 myActivityId=1;
	int32 activityId=2;
	string title=3;
	string currentUserCountText=4;
    PBWxTask task=5;
    PBWxRewardProcess rewardProcess=6;
    PBWxExecute execute=7;//行动
    PBWxWeightCurve weightCurve=8;//体重曲线
    PBWxPepleExecute pepleExecute=9;//他们行动了
}





//奖励情况
message PBWxRewardProcess{
PBWxRewardProcessType type=1;
string text=2;
}

//体重曲线
message PBWxWeightCurve{
repeated PBWxWeightCurveItem weights=1;
}
message PBWxWeightCurveItem{
int32 weight=1;
uint32 time=2;//称重时间
}

//他们行动了
message PBWxPepleExecute{
PBWxPepleExecuteHead head=1;
repeated PBWxPepleExecuteItem item=2;
}

//他们行动了分页查询
message PBWxPepleExecutePageable{
Pageable pageable=1;
repeated PBWxPepleExecuteItem item=2;
}

//他们行动了，最前面展现概要信息
message PBWxPepleExecuteHead{
string allRankingText=1;//所有人中排名
string friendRankingText=2;//朋友圈中
}

//他们行动了，每位用户的执行数据
message PBWxPepleExecuteItem{
PBWxUser user=1;//用户
PBWxExecuteType executeType=3;//执行类型
oneof executeItem{
	PBWxExecuteEarly early=4;
	PBWxExecuteStep step=5;
	PBWxExecuteDiet diet=6;
	PBWxExecuteWeight weight=7;	
}
PBWxSocialComment socialComment=8;//评论
}

//社交评论区域
message PBWxSocialComment{
repeated string praise=1;//点赞列表
repeated PBWxComment comment=2;//评论列表
}
//社交评论内的一项评论
message PBWxComment{
PBWxUser user=1;//评论者
PBWxUser targetUser=2;//评论目标用户，可选
string text=3;//评论内容
}